<resources>
    <string name="app_name">iBaax</string>
    <string name="google_maps_api">AIzaSyB-ZuKd0uYuA8Uf_cky94jDatNJ3yHfoSg </string>
    <string name="slide_1_title">Find your next home</string>
    <string name="slide_1_desc">Quickly search for properties for sale or rent in your location</string>
    <string name="slide_2_title">Find Real Estate Agents</string>
    <string name="slide_2_desc">Search for Agents to help you buy, sell or rent your property</string>
    <string name="slide_3_title">Favorites &amp; Saved Searches</string>
    <string name="slide_3_desc">Easily add your favorite properties to your personal shortlist and saved searches</string>
    <string name="slide_4_title">Sell or Rent your home</string>
    <string name="slide_4_desc">Post your property for sale or rent on the iBaax Marketplace for great results</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_start">Get Start</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="forgot_your_pass">Forgot Your Password</string>
    <string name="continue_with">Continue With</string>
    <string name="have_account">Have\'nt an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">Last Name</string>
    <string name="mobileno">Mobile Number</string>
    <string name="account_setup">Account SetUp</string>
    <string name="general_user">General User</string>
    <string name="professional_profile">Real Estate Professional Profile</string>
    <string name="business_profile">Real Estate Business Profile</string>
    <string name="save">Save</string>
    <string name="addressline">Address Line 1</string>
    <string name="city">City</string>
    <string name="zipcode">ZipCode</string>
    <string name="forgot_desc">Do Not Worry, Choose the Method you want to retrieve your password.</string>
    <string name="recover_by_email">Recover By Email</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="recover_by_sms">Recover By SMS</string>
    <string name="enter_phone">Enter Your Mobile Number</string>
    <string name="verify_code">Verify Code</string>
    <string name="verify_desc">Please enter the verification code we sent to you</string>
    <string name="home">Home</string>
    <string name="share_message">Share this app with frnds</string>
    <string name="about_app">About App</string>
    <string name="terms">Terms</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="access_data">To Access all data \n Please</string>
    <string name="create_account">Create Account</string>
    <string name="settings">Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="notification">Notification</string>
    <string name="sms_alert">SMS alert</string>
    <string name="email_sub">Email Subscriber</string>
    <string name="resend">Resend</string>
    <string name="recover_password">Recover Password</string>
    <string name="enter_password">Enter New Password</string>
    <string name="new_password">New Password</string>

    //post property
    <string name="post_property">Post Property</string>
    <string name="post_requirements">Post Requirements</string>
    <string name="post_service">Post Real Estate Service</string>
    <string name="post_a_property">Post A Property</string>
    <string name="for_sale">For Sale</string>
    <string name="for_rent">For Rent</string>
    <string name="title">Title</string>
    <string name="full_address">Property Full Address</string>
    <string name="map_location">Enter Property Map Location</string>
    <string name="are_measurment">Area Mesurements</string>
    <string name="price">Price($50)</string>
    <string name="add_video_link">Add Video Link</string>
    <string name="photo_and_video"><![CDATA[Photo & video]]></string>
    <string name="indoor_amenities">Indoor Amenities</string>
    <string name="outdoor_features">Outdoor Features</string>
    <string name="property_facing">Property Facing And Views</string>
    <string name="amenities">Amenities</string>
    <string name="property_sarrounding">Property Surrounding Info and local area</string>
    <string name="property_pricing">Price Per Unit, Taxes and Service Charges</string>
    <string name="sarrounding_hint">Property Price Per Sq Feet</string>
    <string name="owner_contact">+ Add New Owner Contact</string>
    <string name="add_business_profile">+ Add Real Estate Business Profile</string>
    <string name="save_preview"><![CDATA[Save & Preview]]></string>
    <string name="owner_sales">Owner or Sales Contact</string>
    <string name="agent_contact">+ Add Owner AgentContact</string>
    <string name="name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="phone">Phone</string>
    <string name="notes">Notes</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="instant_offer">Make Instant Offer</string>
    <string name="basice_property_info">Basic Property Information</string>
    <string name="description">Description</string>
    <string name="location_map">Location Map</string>
    <string name="open_house_event">Upcoming Open-house Events</string>
    <string name="book_now">Book Now</string>
    <string name="amenities_specificatin">Amenities and Specification</string>
    <string name="publish_property">publish Property</string>
    <string name="unpublish">Unpublish</string>
    <string name="thank_you">Thnak You</string>
    <string name="property_posted">Your Property Posted Successfully</string>
    <string name="make_feture">Make Featured Propoerty</string>
    <string name="make_payment">Make Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="paypal">Paypal</string>
    <string name="card_information">Card Information</string>
    <string name="card_no">CardNo</string>
    <string name="cvc">CVC</string>
    <string name="ex_date">Ex Date</string>
    <string name="paynow">Pay Now</string>
    <string name="property_fetured">Your Property is Fetured Successfully</string>

</resources>
