<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_white"
    tools:context=".activity.HomeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/btn_save"
        android:padding="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/ed_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/bg_color"
                android:hint="@string/name"
                android:singleLine="true"
                android:padding="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/ed_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/bg_color"
                android:hint="@string/Mobile"
                android:inputType="number"
                android:singleLine="true"
                android:padding="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/bg_color"
                android:hint="@string/phone"
                android:inputType="number"
                android:singleLine="true"
                android:padding="10dp"
                android:textSize="14dp" />
            <EditText
                android:id="@+id/ed_notes"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                android:background="@color/bg_color"
                android:gravity="start"
                android:hint="@string/notes"
                android:maxLines="4"
                android:padding="10dp"
                android:textSize="14dp" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <Button
        android:id="@+id/btn_save"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginRight="5dp"
        android:text="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white" />
</RelativeLayout>