<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/ln_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/ibaax_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="@string/welcome_back"
                android:textColor="@color/screen_title" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />
            
        </LinearLayout>
        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/bg_color"
            android:hint="@string/username"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/bg_color"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="5dp"
                android:text="@string/sign_in"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txt_forgotpassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:gravity="center"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/des_color"
                    android:layout_marginRight="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="or"/>
                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1"
                    android:background="@color/des_color"
                    android:layout_marginLeft="5dp"
                    />


            </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with"
            android:textSize="16dp"
            android:textColor="@color/screen_title"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/fb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profile_fb"
                android:layout_marginRight="30dp"/>
            <ImageView
                android:id="@+id/twitter"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/twitter"
                android:layout_marginRight="30dp"/>
            <ImageView
                android:id="@+id/google"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/profile_gplus"/>

        </LinearLayout>


        </LinearLayout>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:layout_marginRight="5dp"/>
        <TextView
            android:id="@+id/txt_getStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_start"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginRight="3dp"
            android:textStyle="bold"/>

    </LinearLayout>




</RelativeLayout>