<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activity.HomeActivity">

    <LinearLayout
        android:id="@+id/ln_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:src="@drawable/ibaax_logo" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="@color/screen_title"
            android:textSize="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/access_data"/>
        <Button
            android:layout_below="@+id/img_getstart"
            android:id="@+id/btn_getStart"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:background="@drawable/btn_selected"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_below="@+id/btn_getStart"
            android:id="@+id/btn_signin"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_desable"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:layout_centerHorizontal="true"/>
    </LinearLayout>
</RelativeLayout>